--- a/TinDog-Start/index.html
+++ b/TinDog-Start/index.html
@@ -39,10 +39,10 @@
               <a class="nav-link" href="">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Dowload</a>
+              <a class="nav-link" href="">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Docs</a>
+              <a class="nav-link" href="">Download</a>
             </li>
           </ul>
         </div>
